# Scenarius

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_pgvector_embeddings.py  003_ensure_fragment_embeddings.py
app/: __init__.py  config.py  db.py  i18n.py  main.py  models.py  schemas.py
app/api/: generation_router.py  review_router.py  router.py
app/services/: embeddings.py  fragments.py  generation.py  llm.py  news.py  review.py
data/: corpus.yaml  postgres_instances.yaml  sources.yaml
scrapers/: __init__.py  __main__.py  anekdot_ru.py  canonical.py  citaty_info.py  cli.py  corpus.py  culture_ru.py  culture_ru_parse.py  dedup.py  embed_backfill.py  errors.py  fail_fast.py  gutenberg.py  http_client.py  ingest.py  ingest_stats.py  mediawiki.py  opensubtitles.py  pipeline.py  poetrydb.py  pull_log.py  pushdom.py  quotable.py  ruscorpora.py  seed.py  sources.py  srt_parse.py  wikiquote.py  wikisource.py  wiktionary.py
scripts/: detect_postgres.ps1  find_psql.ps1  ingest_stats.ps1  install_pgvector.ps1  migrate_fresh.ps1  resolve_postgres.ps1  restart_ui.ps1  setup_db.ps1  start_ui.ps1  stop_ui.ps1  ui_common.ps1
tests/: test_canonical.py  test_citaty_links.py  test_corpus.py  test_create_page.py  test_dedup.py  test_embeddings.py  test_fail_fast_sources.py  test_generation.py  test_health.py  test_i18n.py  test_ingest_stats.py  test_llm.py  test_mediawiki.py  test_new_sources.py  test_news.py  test_pull_log.py  test_review.py
(+13 files in other folders)
