[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenarius"
version = "0.3.0"
description = "Quote corpus for news commentary and script generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
embeddings = [
    "fastembed>=0.4",
]
scrapers = [
    "scrapy>=2.12",
]
llm = [
    "openai>=1.0",
]

[project.scripts]
scenarius-scrape = "scrapers.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scrapers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
